--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -468,7 +468,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -494,7 +494,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -522,7 +522,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -544,7 +544,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡25.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -573,7 +573,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡28.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -600,7 +600,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡29.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -624,7 +624,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -646,7 +646,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡45.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -674,7 +674,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡19.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -696,7 +696,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡42.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                        <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -719,7 +719,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                        <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -743,7 +743,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡25.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
+                                                        <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
