--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -624,7 +624,7 @@
                                                             <p class="custom-btn-price">Espectro completo</p>
                                                             <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/cbd">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/cbd">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a> 
@@ -649,7 +649,7 @@
                                                         <p class="custom-btn-price">Alta potencia sin THC</p>
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/cbd">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/cbd">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -673,7 +673,7 @@
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/cbd">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/cbd">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -696,7 +696,7 @@
                                                         <p class="custom-btn-price">Espectro completo</p>
                                                         <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/cbd">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/cbd">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
