--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -521,7 +521,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -545,7 +545,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡7.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
