--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -466,7 +466,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -490,7 +490,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -513,7 +513,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡55.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -535,7 +535,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -563,7 +563,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -587,7 +587,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡52.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -610,7 +610,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡54.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -636,7 +636,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -664,7 +664,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡19.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -688,7 +688,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$34.99</strong> <span class="cs-sold-out">agotado</span></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -711,7 +711,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$44.95</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -737,7 +737,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$119.97</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -764,7 +764,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$124.20</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -786,7 +786,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$74.20</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -808,7 +808,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$57.10</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -830,7 +830,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$44.20</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -858,7 +858,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$49.95</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -880,7 +880,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$49.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -902,7 +902,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$114.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -924,7 +924,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$59.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
