--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -590,7 +590,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡16.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -621,7 +621,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡49.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -645,7 +645,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡13.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -668,7 +668,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡17.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -690,7 +690,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$29.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -721,7 +721,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$19.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                                <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -745,7 +745,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -768,7 +768,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡17.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -790,7 +790,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡48.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
+                                                            <a class="more btn btn--black" target="" href="https://herbalist506.com/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
