--- a/index.html
+++ b/index.html
@@ -602,9 +602,9 @@
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">₡55.000</h5>
+                                                <h5 class="deal-cat">₡49.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">Yocan Vape para Hierba y Wax</h3>
+                                            <h3 class="deals-tit">Yocan Vane 2.1</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Diseñado para durar y superar a los vaporizadores que duplican su precio y tamaño</h6>
                                             </div>
