--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>🇨🇷  Envío gratis en compras mayores a ₡50.000</p></div>
+                                <div class="et_pb_text_inner"><p>🇨🇷 Envío gratis en compras mayores a ₡50.000</p></div>
                             </div>
                         </div>
                     </div>
@@ -424,7 +424,7 @@
 
                                                        
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbal.ml/img/herbalist_vape_banner.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://cdn.shopify.com/s/files/1/0728/2891/1906/files/herbalist-phone.png?v=1680329487&width=1100');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist506.com/collections/all">
