--- a/shop/index.html
+++ b/shop/index.html
@@ -126,7 +126,7 @@ heateor_sss_vertical_sharing{
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>🇨🇷 Envío gratis en compras mayores a $50</p></div>
+                                <div class="et_pb_text_inner"><p>🇨🇷 ENVÍO GRATIS EN COMPRAS MAYORES A ₡50.000</p></div>
                             </div>
                         </div>
                     </div>
