--- a/shop/index.html
+++ b/shop/index.html
@@ -86,7 +86,7 @@ heateor_sss_vertical_sharing{
     <link rel='stylesheet' id='divi-style-css'  href='https://www.herbal.ml/css/divi-child/style.css?ver=1.0.0' type='text/css' media='all' />
 
     <!-- custom css -->
-    <link rel='stylesheet'  href='https://www.herbal.ml/css/custom.css?v3' type='text/css' media='all' />
+    <link rel='stylesheet'  href='https://www.herbal.ml/css/custom.css?v3.3' type='text/css' media='all' />
     <!-- custom css -->
 
     <link rel='shortlink' href='https://www.herbal.ml/shop/' />
@@ -231,7 +231,7 @@ heateor_sss_vertical_sharing{
                                             </div>
                                         </div>
                                   -->
-                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50671583794/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50671583794/?" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                     </li>
 
 
