--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                     <div class="et_pb_column et_pb_column_1_2 et_pb_column_3 et_clickable  et_pb_css_mix_blend_mode_passthrough">
 
                                         <div class="et_pb_module et_pb_text et_pb_text_3  et_pb_text_align_left et_pb_bg_layout_light">
-                                            <div class="et_pb_text_inner"><h2>Stay High!</h2></div>
+                                            <div class="et_pb_text_inner"><h2>Vuela Alto!</h2></div>
                                         </div>
 
                                         <div class="et_pb_module et_pb_text et_pb_text_4  et_pb_text_align_left et_pb_bg_layout_light">
@@ -744,7 +744,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_2_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
 
-                            <div class="et_pb_text_inner"><h2>SMOKE SHOP</h2>
+                            <div class="et_pb_text_inner"><h2>SMOKE SHOP🛑</h2>
                             </div>
 
                         </div>
